--- a/environment.yml
+++ b/environment.yml
@@ -2,27 +2,38 @@ name: dublin-bikes
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8=h620ffc9_4
-  - ca-certificates=2023.12.12=hca03da5_0
-  - libffi=3.4.4=hca03da5_0
-  - ncurses=6.4=h313beb8_0
-  - openssl=3.0.13=h1a28f6b_0
-  - pip=23.3.1=py311hca03da5_0
-  - python=3.11.7=hb885b13_0
-  - readline=8.2=h1a28f6b_0
-  - setuptools=68.2.2=py311hca03da5_0
-  - sqlite=3.41.2=h80987f9_0
-  - tk=8.6.12=hb8d0fd4_0
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2023.12.12=h06a4308_0
+  - click=8.1.7=py311h06a4308_0
+  - flask=2.2.5=py311h06a4308_0
+  - greenlet=3.0.1=py311h6a678d5_0
+  - itsdangerous=2.0.1=pyhd3eb1b0_0
+  - jinja2=3.1.3=py311h06a4308_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libuuid=1.41.5=h5eee18b_0
+  - markupsafe=2.1.3=py311h5eee18b_0
+  - ncurses=6.4=h6a678d5_0
+  - openssl=3.0.13=h7f8727e_0
+  - pip=23.3.1=py311h06a4308_0
+  - python=3.11.7=h955ad1f_0
+  - readline=8.2=h5eee18b_0
+  - setuptools=68.2.2=py311h06a4308_0
+  - sqlalchemy=2.0.25=py311h5eee18b_0
+  - sqlite=3.41.2=h5eee18b_0
+  - tk=8.6.12=h1ccaba5_0
+  - typing-extensions=4.9.0=py311h06a4308_1
+  - typing_extensions=4.9.0=py311h06a4308_1
   - tzdata=2023d=h04d1e81_0
-  - wheel=0.41.2=py311hca03da5_0
-  - xz=5.4.5=h80987f9_0
-  - zlib=1.2.13=h5a0b063_0
+  - werkzeug=2.3.8=py311h06a4308_0
+  - wheel=0.41.2=py311h06a4308_0
+  - xz=5.4.5=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
   - pip:
-      - blinker==1.7.0
-      - click==8.1.7
-      - flask==3.0.2
-      - itsdangerous==2.1.2
-      - jinja2==3.1.3
-      - markupsafe==2.1.5
-      - werkzeug==3.0.1
-prefix: /Users/aprilpolubiec/anaconda3/envs/dublin-bikes
+      - mysqlclient==2.2.4
+prefix: /home/ubuntu/anaconda3/envs/dublin-bikes
