--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
-click==8.1.7
-Flask==3.0.2
-greenlet @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_516imz09pb/croot/greenlet_1702059966336/work
+click @ file:///croot/click_1698129812380/work
+Flask @ file:///croot/flask_1702980023242/work
+greenlet @ file:///croot/greenlet_1702059959679/work
 idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-mysqlclient @ file:///Users/cbousseau/work/recipes/ci_py311/mysqlclient_1677999649982/work
+itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
+Jinja2 @ file:///croot/jinja2_1706733616596/work
+MarkupSafe @ file:///croot/markupsafe_1704205993651/work
 requests==2.31.0
-SQLAlchemy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_178d1hepo8/croot/sqlalchemy_1705089115295/work
-typing_extensions @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_6ejdc7ufhc/croot/typing_extensions_1705599306111/work
+SQLAlchemy @ file:///croot/sqlalchemy_1705089115293/work
+typing_extensions @ file:///croot/typing_extensions_1705599297034/work
 urllib3==2.2.1
-Werkzeug==3.0.1
+Werkzeug @ file:///croot/werkzeug_1706210078083/work
